# telegram_media_downloader

./: .gitignore  CHANGELOG.md  HISTORY_VIEWER_GUIDE.md  README.md  cleanup_orphaned_files.py  config.yaml.example  dev-requirements.txt  docker-compose.yml  export_chat.py  media_downloader.py  pyproject.toml  rebuild_history_index.py  requirements.txt
.cursor/: architecture.md  rules.md
.cursor/plans/: скрипт_удаления_потерянных_файлов_9e252a74.plan.md
.download_cache/: -1001425821275_2600.part  -1001425821275_2602.part  -1001507300353_4428.part  -1001507300353_4429.part  -1003334819414_251.part
core/: downloader.py  session.py
docs/: ARCHITECTURE.md  IMPROVEMENT_PROPOSALS.md  PLAN_TUI_CHAT_SELECTION.md  PROXY_GUIDE.md  README.md  REFACTORING_PLAN.md
templates/: chat_history.html  index.html
tests/: test_archives.py  test_audit.py  test_clickhouse.py  test_export_chat.py  test_media_downloader.py
tests/utils/: test_config.py  test_history.py
utils/: archive_handler.py  chat_selector.py  clickhouse_db.py  config.py  config_schema.py  datetime_helpers.py  file_management.py  filter.py  history.py  history_saver.py  html_formatter.py  i18n.py  log.py  media_utils.py  proxy.py  validation.py
web/: app.py
web/static/: index.html  script.js  style.css
web/static/assets/: index-B2po_47r.css  index-C2xJdsmT.css  index-C9oHh7p2.js  index-CBvriuIn.js  index-Dc7Dgk1h.js  index-DuaVSWDV.css  index-GwmE9vp-.js
web/ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/ui/src/: App.css  App.jsx  index.css
